# v2ray-rust

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: lib.rs
src/api/: mod.rs
src/common/: mod.rs
src/common/net/: mod.rs
src/config/: deserialize.rs  geoip.rs  geosite.rs  ip_trie.rs  mod.rs  route.rs  server_builder.rs  to_chainable_builder.rs  utils.rs
src/proxy/: address.rs  mod.rs
src/proxy/dokodemo_door/: mod.rs
src/proxy/grpc/: mod.rs
src/proxy/h2/: mod.rs
src/proxy/http/: mod.rs
src/proxy/shadowsocks/: aead.rs  aead_helper.rs  udp_crypto_io.rs
src/proxy/socks/: socks5.rs
src/proxy/tls/: macos.rs  mod.rs  tls_stream.rs  unix.rs  windows.rs
src/proxy/vmess/: aead_header.rs  vmess_option.rs
src/proxy/websocket/: mod.rs
